Metodo insertado en el GlobalExceptionHandler y la clase de test del controller de subida de imagenes funcionando correctamente tras solucionar problema con que el authUser venía vacío