@@ -3,49 +3,59 @@ package com.example.fishingapp.controller;
 import com.example.fishingapp.dto.image.ImageDeleteResponseDto;
 import com.example.fishingapp.dto.image.ImageResponseDto;
 import com.example.fishingapp.dto.image.ImageUploadResponseDto;
+import com.example.fishingapp.exception.GlobalExceptionHandler;
 import com.example.fishingapp.exception.InvalidImageException;
 import com.example.fishingapp.exception.ResourceNotFoundException;
 import com.example.fishingapp.exception.UnauthorizedException;
 import com.example.fishingapp.model.User;
 import com.example.fishingapp.security.AuthUser;
 import com.example.fishingapp.security.Role;
+import com.example.fishingapp.security.filter.JwtAuthenticationFilter;
 import com.example.fishingapp.service.CaptureImageService;
+import com.example.fishingapp.service.impl.JwtService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
+import org.springframework.core.MethodParameter;
 import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.request.RequestPostProcessor;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.support.WebDataBinderFactory;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.method.support.HandlerMethodArgumentResolver;
+import org.springframework.web.method.support.ModelAndViewContainer;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Tests unitarios del controlador CaptureImageController
- * Usa @SpringBootTest con @MockBean para mockear el servicio
  */
-@SpringBootTest
+@WebMvcTest(CaptureImageController.class)
 @AutoConfigureMockMvc(addFilters = false)
-@Transactional
+@Import(GlobalExceptionHandler.class)
 @DisplayName("CaptureImageController - Tests Unitarios")
 class CaptureImageControllerTest {
 
@@ -59,12 +69,48 @@ class CaptureImageControllerTest {
     private CaptureImageService captureImageService;
 
     @MockBean
+    private JwtService jwtService;
+
+    @MockBean
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
     private AuthUser mockAuthUser;
     private ImageResponseDto mockImageResponse;
 
+    /**
+     * Configuración para resolver @AuthenticationPrincipal en los tests
+     */
+    @TestConfiguration
+    static class TestConfig implements WebMvcConfigurer {
+        @Override
+        public void addArgumentResolvers(List<HandlerMethodArgumentResolver> resolvers) {
+            resolvers.add(new HandlerMethodArgumentResolver() {
+                @Override
+                public boolean supportsParameter(MethodParameter parameter) {
+                    return parameter.getParameterType().equals(AuthUser.class) &&
+                            parameter.hasParameterAnnotation(AuthenticationPrincipal.class);
+                }
+
+                @Override
+                public Object resolveArgument(MethodParameter parameter,
+                                              ModelAndViewContainer mavContainer,
+                                              NativeWebRequest webRequest,
+                                              WebDataBinderFactory binderFactory) {
+                    SecurityContext context = SecurityContextHolder.getContext();
+                    Authentication auth = context.getAuthentication();
+
+                    if (auth != null && auth.getPrincipal() instanceof AuthUser) {
+                        return auth.getPrincipal();
+                    }
+
+                    return null;
+                }
+            });
+        }
+    }
+
     @BeforeEach
     void setUp() {
-
         // Crear usuario mock
         User mockUser = User.builder()
                 .id(1L)
@@ -77,8 +123,11 @@ class CaptureImageControllerTest {
                 .id(1L)
                 .username("testuser")
                 .email("test@example.com")
+                .password("hashedPassword")
                 .role(Role.USER)
                 .user(mockUser)
+                .enabled(true)
+                .accountNonLocked(true)
                 .build();
 
         // Crear respuesta mock
@@ -93,15 +142,52 @@ class CaptureImageControllerTest {
                 1080,
                 LocalDateTime.now()
         );
+
+        // Limpiar el contexto de seguridad antes de cada test
+        SecurityContextHolder.clearContext();
+    }
+
+    /**
+     * Helper para configurar la autenticación en el SecurityContext
+     */
+    private void setupAuthentication() {
+        User user = User.builder()
+                .id(1L)
+                .username("testuser")
+                .email("test@example.com")
+                .fullName("Test User")
+                .build();
+
+        AuthUser authUser = AuthUser.builder()
+                .id(1L)
+                .username("testuser")
+                .email("test@example.com")
+                .password("hashedPassword")
+                .role(Role.USER)
+                .user(user)
+                .enabled(true)
+                .accountNonLocked(true)
+                .build();
+
+        Authentication auth = new UsernamePasswordAuthenticationToken(
+                authUser,
+                null,
+                authUser.getAuthorities()
+        );
+
+        SecurityContext context = SecurityContextHolder.createEmptyContext();
+        context.setAuthentication(auth);
+        SecurityContextHolder.setContext(context);
     }
 
     // ==================== TESTS DE SUBIDA DE IMÁGENES ====================
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("POST /api/captures/{captureId}/images - Debe subir imagen exitosamente")
     void testUploadImage_Success() throws Exception {
         // Given
+        setupAuthentication();
+
         MockMultipartFile file = new MockMultipartFile(
                 "file",
                 "test.jpg",
@@ -109,26 +195,28 @@ class CaptureImageControllerTest {
                 "fake image content".getBytes()
         );
 
-        when(captureImageService.uploadImage(anyLong(), anyLong(), any()))
+        when(captureImageService.uploadImage(eq(1L), eq(1L), any()))
                 .thenReturn(mockImageResponse);
 
         // When & Then
         mockMvc.perform(multipart("/api/captures/1/images")
-                        .file(file)
-                        .with(user(mockAuthUser)))
+                        .file(file))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.fileName", is("test.jpg")))
-                .andExpect(jsonPath("$.mimeType", is("image/jpeg")));
+                .andExpect(jsonPath("$.mimeType", is("image/jpeg")))
+                .andExpect(jsonPath("$.originalUrl", is("https://s3.tebi.io/bucket/test.jpg")))
+                .andExpect(jsonPath("$.thumbnailUrl", is("https://s3.tebi.io/bucket/thumb.jpg")));
 
-        verify(captureImageService, times(1)).uploadImage(anyLong(), anyLong(), any());
+        verify(captureImageService, times(1)).uploadImage(eq(1L), eq(1L), any());
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("POST /api/captures/{captureId}/images - Debe fallar con captura inexistente")
     void testUploadImage_CaptureNotFound() throws Exception {
         // Given
+        setupAuthentication();
+
         MockMultipartFile file = new MockMultipartFile(
                 "file",
                 "test.jpg",
@@ -136,22 +224,24 @@ class CaptureImageControllerTest {
                 "fake content".getBytes()
         );
 
-        when(captureImageService.uploadImage(anyLong(), anyLong(), any()))
+        when(captureImageService.uploadImage(eq(999L), eq(1L), any()))
                 .thenThrow(new ResourceNotFoundException("Captura no encontrada con ID: 999"));
 
         // When & Then
         mockMvc.perform(multipart("/api/captures/999/images")
-                        .file(file)
-                        .with(user(mockAuthUser)))
+                        .file(file))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.message", containsString("Captura no encontrada")));
+
+        verify(captureImageService, times(1)).uploadImage(eq(999L), eq(1L), any());
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("POST /api/captures/{captureId}/images - Debe fallar sin permisos")
     void testUploadImage_Unauthorized() throws Exception {
         // Given
+        setupAuthentication();
+
         MockMultipartFile file = new MockMultipartFile(
                 "file",
                 "test.jpg",
@@ -159,21 +249,46 @@ class CaptureImageControllerTest {
                 "fake content".getBytes()
         );
 
-        when(captureImageService.uploadImage(anyLong(), anyLong(), any()))
+        when(captureImageService.uploadImage(eq(1L), eq(1L), any()))
                 .thenThrow(new UnauthorizedException("No tienes permisos para modificar esta captura"));
 
         // When & Then
         mockMvc.perform(multipart("/api/captures/1/images")
-                        .file(file)
-                        .with(user(mockAuthUser)))
+                        .file(file))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.message", containsString("No tienes permisos")));
+
+        verify(captureImageService, times(1)).uploadImage(eq(1L), eq(1L), any());
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("POST /api/captures/{captureId}/images - Debe fallar con imagen inválida")
     void testUploadImage_InvalidImage() throws Exception {
+        // Given
+        setupAuthentication();
+
+        MockMultipartFile file = new MockMultipartFile(
+                "file",
+                "test.jpg",
+                "image/jpeg",
+                "fake content".getBytes()
+        );
+
+        when(captureImageService.uploadImage(eq(1L), eq(1L), any()))
+                .thenThrow(new InvalidImageException("El archivo está vacío"));
+
+        // When & Then
+        mockMvc.perform(multipart("/api/captures/1/images")
+                        .file(file))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.message", containsString("vacío")));
+
+        verify(captureImageService, times(1)).uploadImage(eq(1L), eq(1L), any());
+    }
+
+    @Test
+    @DisplayName("POST /api/captures/{captureId}/images - Debe fallar sin autenticación")
+    void testUploadImage_Unauthenticated() throws Exception {
         // Given
         MockMultipartFile file = new MockMultipartFile(
                 "file",
@@ -182,46 +297,40 @@ class CaptureImageControllerTest {
                 "fake content".getBytes()
         );
 
-        when(captureImageService.uploadImage(anyLong(), anyLong(), any()))
-                .thenThrow(new InvalidImageException("El archivo está vacío"));
-
-        // When & Then
+        // When & Then (sin llamar a setupAuthentication())
         mockMvc.perform(multipart("/api/captures/1/images")
-                        .file(file)
-                        .with(user(mockAuthUser)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.message", containsString("vacío")));
+                        .file(file))
+                .andExpect(status().isInternalServerError()); // AuthUser será null
+
+        verify(captureImageService, never()).uploadImage(anyLong(), anyLong(), any());
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("POST /api/captures/{captureId}/images/multiple - Debe subir múltiples imágenes")
     void testUploadMultipleImages_Success() throws Exception {
         // Given
+        setupAuthentication();
+
         MockMultipartFile file1 = new MockMultipartFile("files", "test1.jpg", "image/jpeg", "content1".getBytes());
         MockMultipartFile file2 = new MockMultipartFile("files", "test2.jpg", "image/jpeg", "content2".getBytes());
 
-        ImageUploadResponseDto response = new ImageUploadResponseDto(
-                1L,
-                List.of(mockImageResponse, mockImageResponse),
-                2,
-                "2 imágenes subidas correctamente"
-        );
+        ImageResponseDto image1 = new ImageResponseDto(1L, "url1", "thumb1", "test1.jpg", 1024L, "image/jpeg", 1920, 1080, LocalDateTime.now());
+        ImageResponseDto image2 = new ImageResponseDto(2L, "url2", "thumb2", "test2.jpg", 2048L, "image/jpeg", 1920, 1080, LocalDateTime.now());
+        ImageUploadResponseDto response = new ImageUploadResponseDto(1L, List.of(image1, image2), 2, "2 imagen(es) subida(s) correctamente");
 
-        when(captureImageService.uploadMultipleImages(anyLong(), anyLong(), any()))
-                .thenReturn(response);
+        when(captureImageService.uploadMultipleImages(eq(1L), eq(1L), any())).thenReturn(response);
 
         // When & Then
         mockMvc.perform(multipart("/api/captures/1/images/multiple")
                         .file(file1)
-                        .file(file2)
-                        .with(user(mockAuthUser)))
+                        .file(file2))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.captureId", is(1)))
                 .andExpect(jsonPath("$.totalImages", is(2)))
-                .andExpect(jsonPath("$.uploadedImages", hasSize(2)));
+                .andExpect(jsonPath("$.uploadedImages", hasSize(2)))
+                .andExpect(jsonPath("$.message", is("2 imagen(es) subida(s) correctamente")));
 
-        verify(captureImageService, times(1)).uploadMultipleImages(anyLong(), anyLong(), any());
+        verify(captureImageService, times(1)).uploadMultipleImages(eq(1L), eq(1L), any());
     }
 
     // ==================== TESTS DE OBTENCIÓN DE IMÁGENES ====================
@@ -230,14 +339,18 @@ class CaptureImageControllerTest {
     @DisplayName("GET /api/captures/{captureId}/images - Debe obtener todas las imágenes")
     void testGetImagesByCapture_Success() throws Exception {
         // Given
-        List<ImageResponseDto> images = List.of(mockImageResponse, mockImageResponse);
+        ImageResponseDto image1 = new ImageResponseDto(1L, "url1", "thumb1", "test1.jpg", 1024L, "image/jpeg", 1920, 1080, LocalDateTime.now());
+        ImageResponseDto image2 = new ImageResponseDto(2L, "url2", "thumb2", "test2.jpg", 2048L, "image/jpeg", 1920, 1080, LocalDateTime.now());
+
+        List<ImageResponseDto> images = List.of(image1, image2);
         when(captureImageService.getImagesByCapture(1L)).thenReturn(images);
 
         // When & Then
         mockMvc.perform(get("/api/captures/1/images"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(jsonPath("$[0].fileName", is("test.jpg")));
+                .andExpect(jsonPath("$[0].fileName", is("test1.jpg")))
+                .andExpect(jsonPath("$[1].fileName", is("test2.jpg")));
 
         verify(captureImageService, times(1)).getImagesByCapture(1L);
     }
@@ -246,12 +359,14 @@ class CaptureImageControllerTest {
     @DisplayName("GET /api/captures/{captureId}/images - Debe retornar lista vacía")
     void testGetImagesByCapture_EmptyList() throws Exception {
         // Given
-        when(captureImageService.getImagesByCapture(1L)).thenReturn(List.of());
+        when(captureImageService.getImagesByCapture(1L)).thenReturn(Collections.emptyList());
 
         // When & Then
         mockMvc.perform(get("/api/captures/1/images"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(0)));
+
+        verify(captureImageService, times(1)).getImagesByCapture(1L);
     }
 
     @Test
@@ -265,6 +380,8 @@ class CaptureImageControllerTest {
         mockMvc.perform(get("/api/captures/999/images"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.message", containsString("Captura no encontrada")));
+
+        verify(captureImageService, times(1)).getImagesByCapture(999L);
     }
 
     @Test
@@ -277,7 +394,10 @@ class CaptureImageControllerTest {
         mockMvc.perform(get("/api/captures/images/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.fileName", is("test.jpg")));
+                .andExpect(jsonPath("$.fileName", is("test.jpg")))
+                .andExpect(jsonPath("$.fileSize", is(1024)))
+                .andExpect(jsonPath("$.width", is(1920)))
+                .andExpect(jsonPath("$.height", is(1080)));
 
         verify(captureImageService, times(1)).getImageById(1L);
     }
@@ -293,6 +413,8 @@ class CaptureImageControllerTest {
         mockMvc.perform(get("/api/captures/images/999"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.message", containsString("Imagen no encontrada")));
+
+        verify(captureImageService, times(1)).getImageById(999L);
     }
 
     @Test
@@ -309,131 +431,182 @@ class CaptureImageControllerTest {
         verify(captureImageService, times(1)).countImagesByCapture(1L);
     }
 
+    @Test
+    @DisplayName("GET /api/captures/{captureId}/images/count - Debe retornar cero si no hay imágenes")
+    void testCountImages_Zero() throws Exception {
+        // Given
+        when(captureImageService.countImagesByCapture(1L)).thenReturn(0);
+
+        // When & Then
+        mockMvc.perform(get("/api/captures/1/images/count"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.count", is(0)));
+
+        verify(captureImageService, times(1)).countImagesByCapture(1L);
+    }
+
     // ==================== TESTS DE ELIMINACIÓN ====================
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("DELETE /api/captures/images/{imageId} - Debe eliminar imagen correctamente")
     void testDeleteImage_Success() throws Exception {
         // Given
+        setupAuthentication();
+
         ImageDeleteResponseDto response = ImageDeleteResponseDto.success(1L, 1L);
-        when(captureImageService.deleteImage(anyLong(), anyLong())).thenReturn(response);
+        when(captureImageService.deleteImage(eq(1L), eq(1L))).thenReturn(response);
 
         // When & Then
-        mockMvc.perform(delete("/api/captures/images/1")
-                        .with(user(mockAuthUser)))
+        mockMvc.perform(delete("/api/captures/images/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.deleted", is(true)))
                 .andExpect(jsonPath("$.imageId", is(1)))
                 .andExpect(jsonPath("$.captureId", is(1)));
 
-        verify(captureImageService, times(1)).deleteImage(anyLong(), anyLong());
+        verify(captureImageService, times(1)).deleteImage(eq(1L), eq(1L));
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("DELETE /api/captures/images/{imageId} - Debe fallar con imagen inexistente")
     void testDeleteImage_ImageNotFound() throws Exception {
         // Given
-        when(captureImageService.deleteImage(anyLong(), anyLong()))
+        setupAuthentication();
+
+        when(captureImageService.deleteImage(eq(999L), eq(1L)))
                 .thenThrow(new ResourceNotFoundException("Imagen no encontrada con ID: 999"));
 
         // When & Then
-        mockMvc.perform(delete("/api/captures/images/999")
-                        .with(user(mockAuthUser)))
+        mockMvc.perform(delete("/api/captures/images/999"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.message", containsString("Imagen no encontrada")));
+
+        verify(captureImageService, times(1)).deleteImage(eq(999L), eq(1L));
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("DELETE /api/captures/images/{imageId} - Debe fallar sin permisos")
     void testDeleteImage_Unauthorized() throws Exception {
         // Given
-        when(captureImageService.deleteImage(anyLong(), anyLong()))
+        setupAuthentication();
+
+        when(captureImageService.deleteImage(eq(1L), eq(1L)))
                 .thenThrow(new UnauthorizedException("No tienes permisos para eliminar esta imagen"));
 
         // When & Then
-        mockMvc.perform(delete("/api/captures/images/1")
-                        .with(user(mockAuthUser)))
+        mockMvc.perform(delete("/api/captures/images/1"))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.message", containsString("No tienes permisos")));
+
+        verify(captureImageService, times(1)).deleteImage(eq(1L), eq(1L));
+    }
+
+    @Test
+    @DisplayName("DELETE /api/captures/images/{imageId} - Debe fallar sin autenticación")
+    void testDeleteImage_Unauthenticated() throws Exception {
+        // When & Then (sin llamar a setupAuthentication())
+        mockMvc.perform(delete("/api/captures/images/1"))
+                .andExpect(status().isInternalServerError()); // AuthUser será null
+
+        verify(captureImageService, never()).deleteImage(anyLong(), anyLong());
     }
 
     @Test
     @DisplayName("DELETE /api/captures/{captureId}/images - Debe eliminar todas las imágenes")
     void testDeleteAllImages_Success() throws Exception {
-        // Mock del servicio
-        doNothing().when(captureImageService).deleteAllImagesByCapture(anyLong(), anyLong());
+        // Given
+        setupAuthentication();
 
-        // Creamos un Authentication personalizado que devuelva nuestro mockAuthUser
-        AbstractAuthenticationToken authToken = new AbstractAuthenticationToken(null) {
-            @Override
-            public Object getCredentials() {
-                return null;
-            }
+        doNothing().when(captureImageService).deleteAllImagesByCapture(eq(1L), eq(1L));
 
-            @Override
-            public Object getPrincipal() {
-                return mockAuthUser; // <--- aquí va nuestro AuthUser
-            }
-        };
-        authToken.setAuthenticated(true);
-
-        // Ejecutar el DELETE con la autenticación simulada
-        mockMvc.perform(delete("/api/captures/1/images")
-                        .with(authentication(authToken)))
+        // When & Then
+        mockMvc.perform(delete("/api/captures/1/images"))
                 .andExpect(status().isNoContent());
 
-        // Verificar que el servicio fue llamado con el ID correcto
-        verify(captureImageService, times(1)).deleteAllImagesByCapture(1L, mockAuthUser.getId());
+        verify(captureImageService, times(1)).deleteAllImagesByCapture(eq(1L), eq(1L));
     }
 
-
-
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("DELETE /api/captures/{captureId}/images - Debe fallar con captura inexistente")
     void testDeleteAllImages_CaptureNotFound() throws Exception {
         // Given
+        setupAuthentication();
+
         doThrow(new ResourceNotFoundException("Captura no encontrada con ID: 999"))
-                .when(captureImageService).deleteAllImagesByCapture(anyLong(), anyLong());
+                .when(captureImageService).deleteAllImagesByCapture(eq(999L), eq(1L));
 
         // When & Then
-        mockMvc.perform(delete("/api/captures/999/images")
-                        .with(user(mockAuthUser)))
+        mockMvc.perform(delete("/api/captures/999/images"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.message", containsString("Captura no encontrada")));
+
+        verify(captureImageService, times(1)).deleteAllImagesByCapture(eq(999L), eq(1L));
     }
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("DELETE /api/captures/{captureId}/images - Debe fallar sin permisos")
     void testDeleteAllImages_Unauthorized() throws Exception {
         // Given
+        setupAuthentication();
+
         doThrow(new UnauthorizedException("No tienes permisos para eliminar estas imágenes"))
-                .when(captureImageService).deleteAllImagesByCapture(anyLong(), anyLong());
+                .when(captureImageService).deleteAllImagesByCapture(eq(1L), eq(1L));
 
         // When & Then
-        mockMvc.perform(delete("/api/captures/1/images")
-                        .with(user(mockAuthUser)))
+        mockMvc.perform(delete("/api/captures/1/images"))
                 .andExpect(status().isForbidden())
                 .andExpect(jsonPath("$.message", containsString("No tienes permisos")));
+
+        verify(captureImageService, times(1)).deleteAllImagesByCapture(eq(1L), eq(1L));
+    }
+
+    @Test
+    @DisplayName("DELETE /api/captures/{captureId}/images - Debe fallar sin autenticación")
+    void testDeleteAllImages_Unauthenticated() throws Exception {
+        // When & Then (sin llamar a setupAuthentication())
+        mockMvc.perform(delete("/api/captures/1/images"))
+                .andExpect(status().isInternalServerError()); // AuthUser será null
+
+        verify(captureImageService, never()).deleteAllImagesByCapture(anyLong(), anyLong());
     }
 
     // ==================== TESTS DE VALIDACIÓN DE PARÁMETROS ====================
 
     @Test
-    @WithMockUser(username = "testuser")
     @DisplayName("Debe fallar con ID de captura inválido")
     void testUploadImage_InvalidCaptureId() throws Exception {
         // Given
+        setupAuthentication();
+
         MockMultipartFile file = new MockMultipartFile("file", "test.jpg", "image/jpeg", "content".getBytes());
 
         // When & Then - ID no numérico
         mockMvc.perform(multipart("/api/captures/invalid/images")
-                        .file(file)
-                        .with(user(mockAuthUser)))
+                        .file(file))
                 .andExpect(status().isBadRequest());
+
+        verify(captureImageService, never()).uploadImage(anyLong(), anyLong(), any());
+    }
+
+    @Test
+    @DisplayName("Debe fallar con ID de imagen inválido en GET")
+    void testGetImageById_InvalidImageId() throws Exception {
+        // When & Then
+        mockMvc.perform(get("/api/captures/images/invalid"))
+                .andExpect(status().isBadRequest());
+
+        verify(captureImageService, never()).getImageById(anyLong());
+    }
+
+    @Test
+    @DisplayName("Debe fallar con ID de imagen inválido en DELETE")
+    void testDeleteImage_InvalidImageId() throws Exception {
+        // Given
+        setupAuthentication();
+
+        // When & Then
+        mockMvc.perform(delete("/api/captures/images/invalid"))
+                .andExpect(status().isBadRequest());
+
+        verify(captureImageService, never()).deleteImage(anyLong(), anyLong());
     }
 }
